--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,23 +17,24 @@ const { pageTitle } = Astro.props;
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <meta property="og:image" content="/og.jpg" />
+        <meta name="view-transition" content="same-origin" />
         <meta
         name="description"
-        content="Trevor Lee | Software Developer from Vancouver, Canada | TypeScript, React, Next.js, Node.js"
+        content="Trevor Lee | Software Developer and Designer from Vancouver, Canada | TypeScript, React, Next.js, Node.js"
         />
         <title>{pageTitle}</title>
     </head>
     <body
-        class="bg-background overflow-x-hidden font-sans underline-offset-2"
+        class="bg-background overflow-x-hidden font-sans text-content underline-offset-2"
         id="body"
     >
         <div class="mx-auto max-w-screen-md">
             <Navigation />
-            <hr class="bg-gray-2 border-none h-0.5" />
+            <hr class="bg-gray-10 border-none h-0.5" />
             <main class="px-2">
               <slot />
             </main>
-            <hr class="bg-gray-2 border-none h-0.5" />
+            <hr class="bg-gray-10 border-none h-0.5" />
             <Footer />
         </div>
     </body>
