--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,12 +4,12 @@ import CopyButton from "../components/CopyButton";
 
 <footer class=" mt-4 mb-4 flex justify-between font-content px-2">
   <div class="flex gap-4 self-center max-[420px]:flex-col max-[420px]:gap-2">
-    <a href="https://github.com/trevortylerlee" class="text-skin-blue underline"
+    <a href="https://github.com/trevortylerlee" class=""
       >Github</a
     >
     <a
       href="https://www.linkedin.com/in/trevortylerlee/"
-      class="text-skin-blue underline">LinkedIn</a
+      class="">LinkedIn</a
     >
     <CopyButton
       client:load
