--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,17 +3,16 @@ import ThemeToggle from "./ThemeToggle.tsx";
 import PrimarySelector from "./PrimarySelector.tsx";
 ---
 
-    <nav
-      class="flex justify-between py-4 align-middle"
+<nav class="flex justify-between py-4 align-middle">
+  <span>
+    <a
+      id="logo"
+      class="px-2 py-2.5 hover:bg-accent-blue hover:text-content"
+      href="/"
+      aria-label="Go to homepage"
+      title="Go to homepage"
     >
-      <span>
-        <a
-          class="px-2 py-2.5 text-content no-underline hover:bg-accent-blue/20 hover:text-content"
-          href="/"
-          aria-label="Go to homepage"
-          title="Go to homepage"
-        >
-          trevortylerlee.com
-        </a>
-      </span>
-    </nav>
+      trevortylerlee.com
+    </a>
+  </span>
+</nav>
