--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -17,17 +17,17 @@ const { emoji, type } = Astro.props;
   }
 
   .secondary {
-    /* color: #888888; */
+    color: #888888;
     border: 1px solid #888888;
   }
 
   .technology {
-    /* color: #0070f3; */
+    color: #0070f3;
     border: 1px solid #0070f3;
   }
 
   .warning {
-    /* color: #eaaa45; */
+    color: #eaaa45;
     border: 1px solid #eaaa45;
   }
 
