--- a/src/styles/CodeBlock.module.css
+++ b/src/styles/CodeBlock.module.css
@@ -18,7 +18,7 @@ pre {
 
 code {
   border-radius: 0.5rem;
-  font-family: "JetBrains Mono", monospace;
+  font-family: monospace;
   direction: ltr;
   font-size: var(--size-300);
 }
