--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -17,18 +17,18 @@ const { emoji, type } = Astro.props;
   }
 
   .secondary {
-    color: #888888;
-    border: 1px solid #888888;
+    color: #A3A3A3;
+    background: #121212;
   }
 
   .technology {
-    color: #0070f3;
-    border: 1px solid #0070f3;
+    color: #68A6F8;
+    background: #0d1523;
   }
 
   .warning {
-    color: #eaaa45;
-    border: 1px solid #eaaa45;
+    color: #F19E3A;
+    background: #1f1300;
   }
 
   .emoji {
