--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,13 +1,8 @@
----
-import ThemeToggle from "./ThemeToggle.tsx";
-import PrimarySelector from "./PrimarySelector.tsx";
----
-
-<nav class="flex justify-between py-4 align-middle">
+<nav class="flex justify-between py-4 align-middle items-center">
   <span>
     <a
       id="logo"
-      class="px-2 py-2.5 hover:bg-accent-blue hover:text-content"
+      class="px-2 py-2.5 hover:bg-primary text-content"
       href="/"
       aria-label="Go to homepage"
       title="Go to homepage"
@@ -15,4 +10,5 @@ import PrimarySelector from "./PrimarySelector.tsx";
       trevortylerlee.com
     </a>
   </span>
+  <button data-color-mode-switch class="px-2 py-1">🌓</button>
 </nav>
