increase color toggle size

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -10,5 +10,5 @@
       trevortylerlee.com
     </a>
   </span>
-  <button data-color-mode-switch class="px-2 py-1">🌓</button>
+  <button data-color-mode-switch class="px-2 py-1 text-2xl">🌓</button>
 </nav>
