update navigation styling

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,7 @@
   <span>
     <a
       id="logo"
-      class="px-2 py-2.5 hover:bg-primary text-content"
+      class="px-2 py-2.5 hover:bg-accent-blue/20 hover:text-content text-content"
       href="/"
       aria-label="Go to homepage"
       title="Go to homepage"
