--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,14 +5,13 @@ const pageTitle = "Trevor Lee | Homepage";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div class="mb-36 grid h-24 justify-center text-center">
+  <div class="my-36 grid h-24 justify-center text-center">
     <img
-      class="mx-auto"
-      src="/pokemon/pikachu.gif"
-      alt="Pikachu apologizing profusely."
+      class="mx-auto mb-4"
+      src="togepi.gif"
+      alt="Togepi apologizing profusely."
     />
-    <h1 class="title">404 Error</h1>
     <p>This page isn't available. Sorry.</p>
-    <a class="mt-4" href="/">Go Home</a>
+    <a class="mt-8" href="/">Go Home</a>
   </div>
 </BaseLayout>
