change bg image

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -28,7 +28,8 @@ const { pageTitle } = Astro.props;
         class="bg-background overflow-x-hidden font-sans text-content underline-offset-2"
         id="body"
     >
-        <div class="mx-auto max-w-screen-md">
+        <div class="overlay z-0"></div>
+        <div class="mx-auto max-w-screen-md z-10">
             <Navigation />
             <hr class="hr-bg border-none h-0.5" />
             <main class="px-2">
