add link to tsguess

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,6 +50,12 @@ const pageTitle = "Trevor Lee | Homepage";
               </a>
               <p>Tired of typing out arrays? Same... </p>
             </li>
+            <li>
+              <a class="text-lg" href="https://tsguess.vercel.app">
+                Taylor Swift Guessing Game
+              </a>
+              <p>I'm a big fan!</p>
+            </li>
           </ul>
         </div>
         <div class="pb-16 pt-4">
