styling, fix hover in light mode on pagination

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,8 @@
-<nav class="flex justify-between py-4 align-middle items-center">
+<nav class="flex justify-between p-4 align-middle items-center">
   <span>
     <a
       id="logo"
-      class="px-2 py-2.5 hover:bg-accent-blue/20 hover:text-content text-content"
+      class="py-2.5 px-2 hover:bg-accent-blue/20 hover:text-content text-content"
       href="/"
       aria-label="Go to homepage"
       title="Go to homepage"
@@ -10,5 +10,5 @@
       trevortylerlee.com
     </a>
   </span>
-  <button data-color-mode-switch class="px-2 py-1 text-2xl">🌓</button>
+  <button data-color-mode-switch class="py-1 text-2xl">🌓</button>
 </nav>
