--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,7 +31,7 @@ const { pageTitle } = Astro.props;
         <div class="overlay z-0"></div>
         <div class="mx-auto max-w-screen-md z-10">
             <Navigation />
-            <hr class="hr-bg border-none h-0.5" />
+            <hr class="hr-bg border-none h-0.5 ml-4 mr-4" />
             <main class="px-2">
               <slot />
             </main>
