--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ const pageTitle = "Trevor Lee | Homepage";
   <div class="my-36 grid h-24 justify-center text-center">
     <img
       class="mx-auto mb-4"
-      src="togepi.gif"
+      src="/togepi.gif"
       alt="Togepi apologizing profusely."
     />
     <p>This page isn't available. Sorry.</p>
