--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -12,7 +12,7 @@ export async function getStaticPaths({ paginate }) {
   const formattedPosts = formatBlogPost(allPosts);
 
   return paginate(formattedPosts, {
-    pageSize: 7,
+    pageSize: 5,
   });
 }
 
@@ -22,17 +22,7 @@ const { page } = Astro.props;
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <!-- {
-    formattedPosts.map((page) => (
-      <MorePost
-        date={page.data.date}
-        href={page.slug}
-        title={page.data.title}
-        description={page.data.description}
-      />
-    ))
-  } -->
-  <div class="py-8 grid gap-4">
+  <div class="py-8 grid">
     {
       page.data.map((post) => (
         <MorePost
@@ -48,25 +38,3 @@ const { page } = Astro.props;
   <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
   </div>
 </BaseLayout>
-
-<!-- <style>
-  h1 {
-    margin-bottom: 2rem;
-  }
-
-  div {
-    padding-top: 1rem;
-  }
-
-  .test {
-    display: none;
-  }
-
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 4rem;
-    padding: 0;
-  }
-</style> -->
