--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -20,15 +20,13 @@ const {Content} = await post.render()
 ---
 
 <BaseLayout style={styles} pageTitle={post.data.title}>
-  <div style="view-transition-name: test">
+  <div style="view-transition-name: test" class="px-2">
     {post.data.image ? <img src={post.data.image.src} alt={post.data.image.alt} /> : <></> }
-    <div class="">
     <h1 class='text-3xl font-bold mt-6'>{post.data.title}</h1>
     {post.data.date && <p class="mb-8">Posted {formatDate(post.data.date)}</p>}
     <hr class="mb-8 hr-bg border-none h-0.5"/>
     <div id="content" class="prose mx-auto max-w-none mb-12 prose-strong:text-inherit">
       <Content />
-    </div>
     </div>
   </div>
 </BaseLayout>
