--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const pageTitle = "Trevor Lee | Homepage";
             <img
               src="/me-with-roxy.webp"
               alt="A picture of young Trevor with my dog Roxy."
-              class="max-w-[124px] rounded-full motion-safe:hover:animate-spin"
+              class="max-w-[124px] rounded-full motion-safe:hover:animate-spin-slow"
             />
           </div>
           <div
