remove spin, add invert, fix typing error with limit on formatBlogPost

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const pageTitle = "Trevor Lee | Homepage";
               format="avif"
               quality={"low"}
               alt="A picture of young me with my dog Roxy."
-              class="max-w-[124px] rounded-full motion-safe:hover:animate-spin-slow"
+              class="max-w-[124px] rounded-full motion-safe:hover:invert transition ease-out duration-300 hover:ease-in"
             />
           </div>
           <div
