add delay to picture

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const pageTitle = "Trevor Lee | Homepage";
               format="avif"
               quality={"low"}
               alt="A picture of young me with my dog Roxy."
-              class="max-w-[124px] rounded-full motion-safe:hover:invert transition ease-out duration-300 hover:ease-in"
+              class="max-w-[124px] rounded-full motion-safe:hover:invert transition ease-out duration-500 hover:ease-in hover:delay-1000"
             />
           </div>
           <div
