--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,8 @@
-<nav class="flex justify-between p-4 align-middle items-center">
+<nav class="flex items-center justify-between p-4 align-middle">
   <span>
     <a
       id="logo"
-      class="py-2.5 px-2 hover:bg-accent-blue/20 hover:text-content text-content"
+      class="px-2 py-2.5 text-content hover:bg-accent-blue/20 hover:text-content"
       href="/"
       aria-label="Go to homepage"
       title="Go to homepage"
@@ -10,5 +10,45 @@
       trevortylerlee.com
     </a>
   </span>
-  <button data-color-mode-switch class="py-1 text-2xl px-2">🌓</button>
+  <button data-color-mode-switch class="themeToggle px-2 py-1" id="themeToggle">
+    <span class="themeIcon dark opacity-75">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+        class="h-6 w-6"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z"
+          clip-rule="evenodd"></path>
+      </svg>
+    </span>
+    <span class="themeIcon light">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+        class="h-6 w-6"
+      >
+        <path
+          d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"
+        ></path>
+      </svg>
+    </span>
+  </button>
 </nav>
+
+<script>
+  const url = window.location.href
+  console.log(url)
+
+  if (url === 'http://localhost:3000/') {
+    const toggleButton = document.getElementById('themeToggle');
+    const themeIcons = document.querySelectorAll('.themeIcon');
+
+    toggleButton?.addEventListener('click', () => {
+      themeIcons.forEach(icon => icon.classList.toggle('.themeIcon'));
+    })
+  }
+</script>
