--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -39,7 +39,7 @@
   </button>
 </nav>
 
-<script>
+<!-- <script>
   const url = window.location.href
   console.log(url)
 
@@ -51,4 +51,4 @@
       themeIcons.forEach(icon => icon.classList.toggle('.themeIcon'));
     })
   }
-</script>
+</script> -->
