another test for safari css flicker

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -140,6 +140,8 @@
 
     a, button {
         touch-action: manipulation;
+        -webkit-backface-visibility: hidden;
+        -webkit-tap-highlight-color: transparent;
         -webkit-tap-highlight-color: transparent;
     }
 
