--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,26 +16,27 @@
         --gray-10: 44 44 46;
         --gray-11: 28 28 30;
 
-        --background: var(--gray-11);
+        --background: var(--gray-1    1);
         --content: var(--gray-1);
-        --primary: 41 151 255;
+        --primary: 59 143 242;
+        --visited: 191 90 242;
 
-        --red: 255 49 48;
-        --orange: 255 149 0;
-        --yellow: 255 204 0;
-        --green: 40 205 65;
-        --mint: 0 199 190;
-        --teal: 89 173 196;
-        --cyan: 85 190 240;
-        --blue: 0 122 255;
-        --indigo: 88 86 214;
-        --purple: 175 82 222;
-        --pink: 255 45 85;
-        --brown: 162 132 94;
+        --red: 255 69 58;
+        --orange: 255 159 10;
+        --yellow: 255 214 10;
+        --green: 50 215 75;
+        --mint: 102 212 207;
+        --teal: 106 196 220;
+        --cyan: 90 200 245;
+        --blue: 10 132 255;
+        --indigo: 94 92 230;
+        --purple: 191 90 242;
+        --pink: 255 55 95;
+        --brown: 172 142 104;
     }
 
     [data-color-mode='light'] :root {
-        --red: 255 49 48;
+        --red: 255 59 48;
         --orange: 255 149 0;
         --yellow: 255 204 0;
         --green: 40 205 65;
@@ -52,7 +53,8 @@
     [data-color-mode='light'] {
         --background: var(--gray-1);
         --content: var(--gray-11);
-        --primary: 0 102 204;
+        --primary: 21 1 228;
+        --visited: 175 82 222;
     }
 
     [data-color-mode='light'] .overlay {
@@ -130,7 +132,11 @@
     }
 
     a[href]:visited {
-        color: rgb(var(--purple));
+        color: rgb(var(--visited));
+    }
+
+    a[href]:active {
+        color: rgb(var(--red));
     }
 
     a[href]:hover,
@@ -140,9 +146,6 @@
 
     a, button {
         touch-action: manipulation;
-        -webkit-backface-visibility: hidden;
-        -webkit-tap-highlight-color: transparent;
-        -webkit-tap-highlight-color: transparent;
     }
 
     #logo {
@@ -185,4 +188,10 @@
 
 #bio {
     text-wrap: balance;
+}
+
+#themeToggle {
+    -webkit-backface-visibility: hidden;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-perspective: 1;
 }
