add aliases, optimize article cover images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,8 @@ const formattedPosts = formatBlogPost(allPosts, {
   limit: 7,
 });
 
-import profilePicture from "../assets/me-with-roxy.webp"
+// import profilePicture from "../assets/me-with-roxy.webp"
+import profilePicture from "@assets/me-with-roxy.webp"
 
 const pageTitle = "Trevor Lee | Homepage";
 ---
