--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import { Image } from "astro:assets";
 import styles from '../../styles/CodeBlock.module.css'
 import { formatDate } from "../../lib/utils"
 
@@ -21,7 +22,7 @@ const {Content} = await post.render()
 
 <BaseLayout style={styles} pageTitle={post.data.title}>
   <div style="view-transition-name: test" class="px-2">
-    {post.data.image ? <img src={post.data.image.src} alt={post.data.image.alt} /> : <></> }
+    {post.data.imageSrc ? <Image src={post.data.imageSrc} alt={post.data.imageAlt} /> : <></> }
     <h1 class='text-3xl font-bold mt-6'>{post.data.title}</h1>
     {post.data.date && <p class="mb-8">Posted {formatDate(post.data.date)}</p>}
     <hr class="mb-8 hr-bg border-none h-0.5"/>
