--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between p-4 align-middle">
+<nav class="flex items-center justify-between py-4 px-2 align-middle max-w-screen-md mx-auto">
   <span>
     <a
       id="logo"
