--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -4,7 +4,7 @@ import { ArrowRight, ArrowLeft } from "lucide-react";
 const { prevUrl, nextUrl } = Astro.props;
 ---
 
-<nav aria-label="Posts Navigation" class="">
+<nav aria-label="Posts Navigation" class="max-w-screen-md mx-auto">
   {
     prevUrl && (
       <span class="flex">
