--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,7 +29,7 @@ const { pageTitle } = Astro.props;
         id="body"
     >
         <div class="overlay z-0"></div>
-        <div class="mx-auto max-w-screen-md z-10">
+        <div class="mx-auto z-10">
             <Navigation />
             <hr class="hr-bg border-none h-0.5 ml-4 mr-4" />
             <main class="px-2">
