--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -21,12 +21,13 @@ const { Content } = await post.render()
 ---
 
 <BaseLayout style={styles} pageTitle={post.data.title}>
-  <div style="view-transition-name: test" class="px-2">
+  <div style="view-transition-name: test" class="max-w-screen-md mx-auto px-2">
     {post.data.imageSrc ?
       <Image
         src={post.data.imageSrc}
         alt={post.data.imageAlt}
         quality={"low"}
+        class="mt-6"
       /> : <></>
     }
     <h1 class='text-3xl font-bold mt-6'>{post.data.title}</h1>
