--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -22,7 +22,7 @@ const { page } = Astro.props;
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div class="py-8 grid">
+  <div class="py-8 grid max-w-screen-md mx-auto">
     {
       page.data.map((post) => (
         <MorePost
